Fixed some minor errors

--- a/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
@@ -862,13 +862,13 @@ Angaben zur Product Compliance einstellen:
 ==== Recyclinggebühren einstellen
 
 Für bestimmte Produktkategorien kann bei eBay eine Recyclinggebühr (Eco-Participation-Gebühr) angegeben werden. Zu diesen Produkten gehören Elektrogeräte und Möbel. Die Recyclinggebühr ist bereits im Verkaufspreis des Artikels enthalten, wird aber separat aufgeführt. Auf eBay wird die Recyclinggebühr auf der Seite des Listings unter dem Verkaufspreis angezeigt. +
-Wie hoch die Recyclinggebühr für einen Artikel ist, erfährst du vom Hersteller oder Lieferanten des Artikels.
+Wie hoch die Recyclinggebühr für einen Artikel ist, erfährst du von der Hersteller:in oder Lieferant:in des Artikels.
 
 [IMPORTANT]
 .Recyclinggebühr für Frankreich verpflichtend
 ====
 Wenn du deine Artikel mit eBay in Frankreich verkaufst, bist du gesetzlich dazu verpflichtet, eine Recyclinggebühr für Artikel der Kategorien *Elektrogeräte* und *Möbel* anzugeben. +
-Die Höhe der Recyclinggebühr erfährst du vom Hersteller oder Lieferanten des Artikels. Wenn du den Artikel selbst herstellst oder nach Frankreich importierst, wende dich an einen Eco-Organisme-Betrieb, um die Recyclinggebühr zu erfragen.
+Die Höhe der Recyclinggebühr erfährst du von der Hersteller:in oder Lieferant:in des Artikels. Wenn du den Artikel selbst herstellst oder nach Frankreich importierst, wende dich an einen Eco-Organisme-Betrieb, um die Recyclinggebühr zu erfragen.
 ====
 
 In plentymarkets wird die Recyclinggebühr mit der Eigenschaft *EcoParticipationFee* angegeben, die du im Menü *Einrichtung » Einstellungen » Eigenschaften » Konfiguration* erstellst. Damit die Eigenschaft *EcoParticipationFee* korrekt übertragen wird, muss sie genauso heißen wie auf eBay. +
@@ -928,7 +928,7 @@ Eigenschaft *EcoParticipatonFee* mit Variante verknüpfen:
 . Wähle im Bereich *Varianteneigenschaften* aus der Dropdown-Liste *Eigenschaften* die Eigenschaft *EcoParticipationFee* und klicke auf *Hinzufügen* (icon:plus-square[role="green"]). +
 → Die Eigenschaft wird hinzugefügt.
 . Gib in der Dropdown-Liste *Wert* den Betrag der Recyclinggebühr ein. +
-*_Hinweis:_* Die Recyclinggebühr erfährst du vom Hersteller oder Lieferanten des Artikels.
+*_Hinweis:_* Die Recyclinggebühr erfährst du von der Hersteller:in oder Lieferant:in des Artikels.
 . Speichere (icon:save[set=plenty]) die Einstellungen.
 
 [TIP]
@@ -941,13 +941,13 @@ Nutze die Gruppenfunktion im Menü *Listings » Aktive Listings*, um neu erstell
 ==== Eindeutige Hersteller-Identifikationsnummer (UPIN) angeben
 
 Für Artikel aus bestimmten Produktkategorien musst du eine eindeutige Hersteller-Identifikationsnummer (UPIN oder SYDEREP-Nummer) angeben, wenn du deine Artikel mit eBay in Frankreich verkaufst. In welchen Produktkategorien du UPINs angeben musst, erfährst du bei eBay unter link:https://www.ebay.de/help/selling/selling/extended-producer-responsibility-for-business-sellers?id=5314#section1[UPIN (eindeutige Hersteller-Identifikationsnummer)^]. +
-Du erhältst die UPIN eines Artikels vom Hersteller oder Lieferanten des Artikels.
+Du erhältst die UPIN eines Artikels von der Hersteller:in oder Lieferant:in des Artikels.
 
 [IMPORTANT]
 .UPIN für Frankreich verpflichtend
 ====
 Wenn du deine Artikel mit eBay in Frankreich verkaufst, bist du gesetzlich dazu verpflichtet, UPINs für Artikel aus bestimmten Kategorien anzugeben. +
-Die UPIN eines Artikels erhältst du vom Hersteller oder Lieferanten des Artikels. Wenn du den Artikel selbst herstellst oder nach Frankreich importierst, wende dich an einen Eco-Organisme-Betrieb, um die UPIN zu erhalten.
+Die UPIN eines Artikels erhältst du von der Hersteller:in oder Lieferant:in des Artikels. Wenn du den Artikel selbst herstellst oder nach Frankreich importierst, wende dich an einen Eco-Organisme-Betrieb, um die UPIN zu erhalten.
 ====
 
 In plentymarkets gibst du UPINs mit Eigenschaften an, die du im Menü *Einrichtung » Einstellungen » Eigenschaften » Konfiguration* erstellst. Damit die Eigenschaften für die UPINs korrekt übertragen werden, müssen sie genauso heißen wie auf eBay. +
@@ -1032,7 +1032,7 @@ Eigenschaft mit Variante verknüpfen:
 . Wähle aus der Dropdown-Liste *Eigenschaften* die gewünschte Eigenschaft und klicke auf *Hinzufügen* (icon:plus-square[role="green"]). +
 → Die Eigenschaft wird hinzugefügt.
 . Gib in der Dropdown-Liste *Wert* die UPIN ein. +
-*_Hinweis:_* Die UPIN erfährst du vom Hersteller oder Lieferanten des Artikels.
+*_Hinweis:_* Die UPIN erfährst du von der Hersteller:in oder Lieferant:in des Artikels.
 . Speichere (icon:save[set=plenty]) die Einstellungen.
 
 [TIP]
