--- a/docs/de-de/modules/maerkte/pages/flubit.adoc
+++ b/docs/de-de/modules/maerkte/pages/flubit.adoc
@@ -90,7 +90,7 @@ Flubit verlangt bestimmte Pflichtangaben. Nur Varianten werden also an den Markt
 * Variante ist sichtbar
 * Artikelbild ist vorhanden
 * Artikelnummer wird übertragen
-* Wird als Artikelnummer die Manufacturer’s Part Number (MPN) übertragen, muss außerdem die Marke oder der Hersteller angegeben werden.
+* Wird als Artikelnummer die Manufacturer’s Part Number (MPN) übertragen, muss außerdem die Marke oder die Hersteller:in angegeben werden.
 
 Fehlen die oben aufgelisteten Angaben, wird die Variante nicht exportiert.
 
