--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -8,7 +8,7 @@
 :market: limango
 :limango:
 
-limango ist die Nr. 1 Plattform in Deutschland für junge Familien und ein Unternehmen der Otto-Group. Neben der geschlossenen Onlineshopping-Community betreibt limango auch den offenen link:https://www.limango.de/shop[Shop^]. Seit dem Launch des Marktplatzes im Jahr 2017 profitieren Endkunden auch von einem breiten, dauerhaft verfügbaren Sortiment, hinter dem inzwischen mehr als 300 Partner stehen.
+limango ist die Nr. 1 Plattform in Deutschland für junge Familien und ein Unternehmen der Otto-Group. Neben der geschlossenen Onlineshopping-Community betreibt limango auch den offenen link:https://www.limango.de/shop[Shop^]. Seit dem Launch des Marktplatzes im Jahr 2017 profitieren Endkund:innen auch von einem breiten, dauerhaft verfügbaren Sortiment, hinter dem inzwischen mehr als 300 Partner stehen.
 
 [#150]
 == Partner:in bei limango werden
@@ -236,7 +236,7 @@ Für Produktnamen gelten die folgenden Regeln:
 
 * Gib den Produktnamen auf Deutsch an.
 * Produktnamen dürfen maximal 80 Zeichen haben und sollten so kurz wie möglich sein.
-* Hersteller oder Eigenmarken dürfen nicht im Produktnamen genannt werden. Diese Informationen werden bei limango separat angezeigt.
+* Hersteller:innen oder Eigenmarken dürfen nicht im Produktnamen genannt werden. Diese Informationen werden bei limango separat angezeigt.
 * Größen, Geschlechterangaben und Wiederholungen dürfen nicht im Produktnamen vorkommen.
 * In bestimmten Kategorien muss die Farbe im Produktnamen angegeben werden nach dem Schema *[Produktbezeichnung] in [Farbe]*. +
 *_Beispiel:_* `T-Shirt in Blau`
