--- a/docs/de-de/modules/maerkte/pages/yatego.adoc
+++ b/docs/de-de/modules/maerkte/pages/yatego.adoc
@@ -4,7 +4,7 @@
 :description: Multi-Channel in plentymarkets: Richte die Schnittstelle zum Marktplatz Yatego in deinem plentymarkets System ein.
 :id: SFARL01
 
-Du kannst deine Artikel über plentymarkets auf der Verkaufsplattform link:http://www.yatego.com/[Yatego.com^] anbieten. Yatego bietet Händlern umfangreiche Service-Leistungen mit leistungsstarken Komplettlösungen sowie umfassendem technischen Support.
+Du kannst deine Artikel über plentymarkets auf der Verkaufsplattform link:http://www.yatego.com/[Yatego.com^] anbieten. Yatego bietet Händler:innen umfangreiche Service-Leistungen mit leistungsstarken Komplettlösungen sowie umfassendem technischen Support.
 
 [#100]
 == Bei Yatego registrieren
