--- a/docs/de-de/modules/maerkte/pages/conrad.adoc
+++ b/docs/de-de/modules/maerkte/pages/conrad.adoc
@@ -187,7 +187,7 @@ Aufträge, die auf Conrad erzeugt wurden, werden alle 15 Minuten in dein plentym
 
 So läuft die Auftragsabwicklung bei Conrad ab:
 
-* Der Händler akzeptiert den Auftrag über eine Ereignisaktion.
+* Die Händler:in akzeptiert den Auftrag über eine Ereignisaktion.
 * Die Zahlung wird von Conrad eingezogen.
 * Mit der Zahlungszusicherung werden die Rechnungs- und Lieferadresse am Auftrag in deinem plentymarkets System aktualisiert.
 * Über eine Ereignisaktion werden Versanddienstleister und Paketnummer am Auftrag in Mirakl aktualisiert.
