--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -478,7 +478,7 @@ Optional hast du auch komplexere Exportmöglichkeiten:
 * <<#optional-fallback, Ein anderes Datenfeld exportieren, wenn das erste Datenfeld leer ist (Ausweich-Datenfelder hinzufügen)>>
 * <<#optional-own-value, Für jeden Datensatz denselben Wert exportieren (icon:pencil[role="blue"] *Eigener Wert*)>>
 * <<#optional-combine, Mehrere Datenfelder miteinander kombinieren>>
-* <<#optional-recalculate, Zahlenwerte beim Export neu berechnen (icon:calculate[set=material] *Formel*)>>
+* <<#optional-recalculate, Zahlenwerte neu berechnen (icon:calculate[set=material] *Formel*)>>
 * <<#optional-change-order, Die Reihenfolge der Datenfelder ändern>>
 
 [.instruction]
@@ -500,7 +500,7 @@ Datenfeld zum Export hinzufügen:
 . Füge alle Datenfelder hinzu, die du exportieren möchtest.
 . *Speichere* (icon:save[set=material]) die Einstellungen. +
 → Die Datenfelder werden mit diesem Katalog exportiert. +
-*_Tipp:_* Es gibt auch komplexere Exportmöglichkeiten. Klappe die Info-Boxen unterhalb dieser Beschreibung auf, um mehr zu erfahren.
+*_Tipp:_* Es gibt auch komplexere Exportmöglichkeiten. Neugierig? Dann klappe die Info-Boxen unterhalb dieser Beschreibung auf.
 
 [#optional-fallback]
 [.collapseBox]
@@ -635,7 +635,7 @@ Zahlenwerte neu berechnen:
 → Das Fenster *Wert ändern* wird geöffnet.
 . Wähle ein Dezimaltrennzeichen aus der Dropdown-Liste.
 . Wähle unten rechts ein Datenfeld, um es zur Berechnung hinzuzufügen (icon:add[set=material]). +
-*_Tipp:_* Nutze die Suche, um Datenfelder schnell zu finden. +
+*_Tipp:_* Nutze die Suche. Damit findest du Datenfelder noch schneller. +
 → Das Datenfeld wird zur Formel hinzugefügt.
 . *_Optional:_* Wenn im Datenfeld das Symbol icon:more_vert[set=material] angezeigt wird, wähle die korrekte Zuweisung für das Datenfeld. +
 *_Tipp:_* Eine Zahl zeigt an, wie viele Zuweisungen für das Datenfeld vorgenommen werden müssen.
