update whisper mode

--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -666,8 +666,8 @@ Nachricht abrechnen:
 *_Beispiel:_* Wenn du eine Zahl eingibst, werden dir mögliche Empfänger:innen mit dieser Auftrags-ID oder Kontakt-ID vorgeschlagen (siehe <<#image-messenger-new-message-suggestion-list>>).
 . Gib den Betreff deiner Nachricht im Feld *Betreff* ein.
 . Gib im Textfeld die Nachricht ein.
-. Klicke auf icon:visibility_on[set=material, role=darkGrey] (*Flüster-Modus*), um die Nachricht abrechnen zu können. +
-*_Hinweis:_* Du erkennst eine geflüsterte Nachricht an dem Symbol icon:visiblity_off[set=material, role=skyBlue].
+. Klicke auf icon:visibility_on[set=material, role=darkGrey], um die Nachricht zu flüstern. +
+*_Hinweis:_* Nur geflüsterte Nachrichten können abgerechnet werden. Du erkennst eine geflüsterte Nachricht an dem Symbol icon:visibility_off[set=material, role=skyBlue].
 . Klicke auf icon:local_offer[set=material, role=darkGrey], um der Nachricht Tags zuzuweisen. +
 *_Wichtig:_* Um Nachrichten abrechnen zu können, musst du im Menü *Einrichtung » Einstellungen » Tags* ein Tag vom Typ *Nachrichten (kostenpflichtig)* erstellt haben.
 . Klicke auf icon:more_vert[set=material, role=darkGrey].
