--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -618,8 +618,8 @@ Billing a message:
 *_Example:_* If you enter a number, possible receivers with this order ID or contact ID will be suggested (see <<#image-messenger-new-message-suggestion-list>>).
 . Enter the subject of the message in the *Subject* field.
 . Enter the message in the text field.
-. Click on icon:visibility_on[set=material, role=darkGrey] (*Whisper mode*) to be able to bill the message. +
-*_Note:_* The symbol icon:visiblity_off[set=material, role=skyBlue] shows you that a message is whispered.
+. Click on icon:visibility_on[set=material, role=darkGrey] to whisper the message. +
+*_Note:_* Only whispered messages can be billed. The symbol icon:visibility_off[set=material, role=skyBlue] shows you that a message is whispered.
 . Click on icon:local_offer[set=material, role=darkGrey] to assign tags for the message. +
 *_Important:_* To be able to bill messages, you have to create a tag of the type *Messages (billable)* in the *Setup » Settings » Tags* menu.
 . Click on icon:more_vert[set=material, role=darkGrey].
