--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -97,7 +97,7 @@ a| Gib einen Dateinamen ein. Mit diesem Namen wird die exportierte Datei gespeic
 Gib deshalb den Dateinamen ohne eine Dateiendung ein.
 Dateiendungen sind zum Beispiel `.csv` oder `.txt`.
 
-*_Tipp:_* Verwende Platzhalter, um beim Export automatisch weitere Informationen zum Dateinamen hinzuzufügen.
+*_Tipp:_* Verwende Platzhalter: Mit Platzhaltern werden beim Export automatisch weitere Informationen zum Dateinamen hinzugefügt.
 
 [.collapseBox]
 .Liste der verfügbaren Platzhalter
