--- a/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
@@ -3,7 +3,7 @@
 --
 image::maerkte:catalogue-menu-colours.png[]
 
-* *Navigation* Wenn du einen Katalog öffnest, wird standardmäßig die Ansicht *Zuordnung* angezeigt. Über die Navigation wechselst du zu anderen Ansichten des Katalogs. Rufe die Katalogeinstellungen auf oder setze Filter, um nur bestimmte Daten zu exportieren. Außerdem kannst du zurück zur Katalogübersicht wechseln oder einen neuen Katalog erstellen.
+* *Navigation* Wenn du einen Katalog öffnest, wird standardmäßig die Ansicht *Zuordnung* angezeigt. Über die Navigation wechselst du zu anderen Ansichten des Katalogs. Rufe die Katalogeinstellungen auf. Setze Filter, mit denen nur bestimmte Daten exportiert werden. Außerdem kannst du zurück zur Katalogübersicht wechseln oder einen neuen Katalog erstellen.
 
 * *Toolbar* In der Toolbar kannst du für den Katalog relevante Aktionen durchführen. Speichere zum Beispiel die Zuordnungen der Datenfelder, stelle eine ältere Version des Katalogs wieder her oder blende optionale Marktplatz-Datenfelder ein oder aus.
 
@@ -58,8 +58,8 @@ Einfache 1:1-Zuordnung erstellen:
 //tag::simple-mappings-config[]
 . Klicke neben dem Marktplatz-Datenfeld auf *+ Datenfeld hinzufügen*. +
 → Links wird die Liste der verfügbaren plentymarkets Datenfelder als Gruppen angezeigt.
-. Klicke auf die gewünschte Gruppe, um die plentymarkets Datenfelder anzuzeigen. +
-→ Die plentymarkets Datenfelder werden angezeigt.
+. Klicke auf die gewünschte Gruppe. +
+→ Die plentymarkets Datenfelder der Gruppe werden angezeigt.
 . Klicke neben dem gewünschten plentymarkets Datenfeld auf das Plus. +
 → Das plentymarkets Datenfeld wird in das Feld rechts eingefügt.
 . Klicke auf *Bestätigen*.
@@ -107,7 +107,7 @@ Komplexe 1:1-Zuordnung erstellen:
 . Klicke neben dem Marktplatz-Datenfeld auf *+ Datenfeld hinzufügen*. +
 → Links werden die verfügbaren plentymarkets Datenfelder als Gruppen angezeigt. +
 . Klicke auf eine Gruppe. +
-→ Die plentymarkets Datenfelder werden angezeigt.
+→ Die plentymarkets Datenfelder der Gruppe werden angezeigt.
 . Klicke auf das plentymarkets Datenfeld, für das du Werte zuordnen möchtest. +
 *_Wichtig:_* Ordne keinen eigenen Wert und keine Eigenschaft des Typs *Kein* zu. +
 → Je nachdem, welches plentymarkets Datenfeld du gewählt hast, gehst du ab jetzt unterschiedlich vor:
@@ -150,8 +150,8 @@ Du legst also fest:
 //tag::fallback-mappings-config[]
 . Klicke neben dem Marktplatz-Datenfeld auf *+ Datenfeld hinzufügen*. +
 → Links wird die Liste der verfügbaren plentymarkets Datenfelder als Gruppen angezeigt.
-. Klicke auf die gewünschte Gruppe, um die plentymarkets Datenfelder anzuzeigen. +
-→ Die plentymarkets Datenfelder werden angezeigt.
+. Klicke auf die gewünschte Gruppe. +
+→ Die plentymarkets Datenfelder der Gruppe werden angezeigt.
 . Klicke neben dem gewünschten plentymarkets Datenfeld auf das Plus. +
 → Das plentymarkets Datenfeld wird in das Feld rechts eingefügt.
 . Klicke in der Liste der plentymarkets Datenfelder neben dem gewünschten plentymarkets Datenfeld auf das Plus. +
@@ -183,8 +183,8 @@ Du legst also fest:
 //tag::1-to-n-mappings-config[]
 . Klicke neben dem Marktplatz-Datenfeld auf *+ Datenfeld hinzufügen*. +
 → Links wird die Liste der verfügbaren plentymarkets Datenfelder als Gruppen angezeigt.
-. Klicke auf die gewünschte Gruppe, um die plentymarkets Datenfelder anzuzeigen. +
-→ Die plentymarkets Datenfelder werden angezeigt.
+. Klicke auf die gewünschte Gruppe. +
+→ Die plentymarkets Datenfelder der Gruppe werden angezeigt.
 . Klicke neben dem gewünschten plentymarkets Datenfeld auf das Plus. +
 → Das plentymarkets Datenfeld wird in das Feld rechts eingefügt.
 . Klicke auf *Bestätigen*.
@@ -257,7 +257,7 @@ Zahlenwerte neu berechnen:
 → Das Datenfeld *Formel* wird in das Feld rechts eingefügt.
 . Klicke in das Datenfeld. +
 → Das Fenster *Wert ändern* wird angezeigt.
-. Gib einen Zahlenwert ein oder wähle unten rechts ein Datenfeld, um es zur Berechnung hinzuzufügen (icon:add[set=material]). +
+. Gib einen Zahlenwert ein oder wähle unten rechts ein plentymarkets Datenfeld, um es zur Berechnung hinzuzufügen (icon:add[set=material]). +
 *_Tipp:_* Nutze die Suche. Damit findest du Datenfelder noch schneller.
 . *_Optional:_* Wenn im Datenfeld das Symbol icon:more_vert[set=material] angezeigt wird, wähle die korrekte Zuweisung für das Datenfeld. +
 *_Tipp:_* Eine Zahl zeigt an, wie viele Zuweisungen für das Datenfeld vorgenommen werden müssen.
