--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -690,6 +690,7 @@
 .plentymarkets Changelog
 * xref:ROOT:changelog.adoc[Aktueller Changelog]
 * xref:changelog:june-2022.adoc[Changelogs Juni 2022]
+** xref:changelog:2022-06-22.adoc[Changelog 22. Juni 2022]
 ** xref:changelog:2022-06-15.adoc[Changelog 15. Juni 2022]
 ** xref:changelog:2022-06-08.adoc[Changelog 08. Juni 2022]
 ** xref:changelog:2022-06-01.adoc[Changelog 01. Juni 2022]
