--- a/docs/de-de/modules/changelog/pages/2022-06-22.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-06-22.adoc
@@ -4,9 +4,9 @@
 :page-index: false
 :page-aliases: ROOT:changelog.adoc
 :startWeekDate: 16. Juni 2022
-:startWeekDate: 22. Juni 2022
+:endWeekDate: 22. Juni 2022
 
-// Ab diesem Eintrag weitermachen: LINK EINFÜGEN
+// Ab diesem Eintrag weitermachen: https://forum.plentymarkets.com/t/nummernkreise-hinweis-auf-die-erlaubte-anzahl-zeichen-numbering-reference-to-the-allowed-number-of-characters/684703
 
 Erfahre, was sich in der Woche vom {startWeekDate} bis zum {endWeekDate} bei plentymarkets getan hat. Im Folgenden findest du alle Changelog-Einträge der letzten Woche für stable- und early-Systeme.
 
@@ -23,18 +23,17 @@ stable::
 :version: stable
 
 [discrete]
-== Neu
-
-Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
-
-
-
-'''
-
-[discrete]
 == Geändert
 
 Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
+
+[discrete]
+=== OTTO
+
+:otto-master-date: 17.06.2022
+:otto-master-link: https://forum.plentymarkets.com/uploads/short-url/zeeTRMqGCyRjFB5kPbHZKRMY6vl.xlsx
+
+include::partial$otto-master-file.adoc[]
 
 [discrete]
 === plentyShop
@@ -54,6 +53,12 @@ Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 * Im Menü *CRM » Kontakte* war die Zahlungsart Rechnung als Standard-Zahlungsart in den Optionen nicht mehr verfügbar. Dies wurde behoben.
 * Durch Ereignisaktionen erstellte Ticketsystem-Nachrichten waren teilweise fehlerhaft. Dadurch konnte man die entsprechenden Tickets nicht mehr bearbeiten. Dieser Fehler wurde behoben.
 
+[discrete]
+=== Prozesse
+
+* Bei der Retourenetikettenerstellung über die Prozesse kam es zu einer Fehlermeldung, wenn man z.B. eine Retoure ausgewählt hat und nicht den Hauptauftrag. Das Retourenetikett wurde dennoch erstellt. Dieser Fehler ist jetzt behoben.
+* Es ist ein Problem mit Aufträge entstanden, die Tags nutzen. Sobald man diese Aufträge filtern wollte (ohne Tag Filter), wurden diese Aufträge nicht von der Aktion *Filter* beachtet. Dieser Fehler ist jetzt behoben worden.
+
 --
 
 early::
@@ -67,16 +72,26 @@ early::
 
 Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
 
-
-
-'''
-
 [discrete]
-== Geändert
+=== Kaufland.de
 
-Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
+* Du kannst ab jetzt mehrere Konten für Kaufland einrichten. Im Menü *Einrichtung » Märkte » Kaufland.de » Einstellungen » [Kaufland-Konto öffnen]* wurden dazu die Tabs Konten und Neues Konto hinzugefügt.
+** Im Tab *Konten* werden alle Konten angezeigt, die du für Kaufland eingerichtet hast. +
+*_Hinweis:_* Momentan wird hier nur ein Konto angezeigt, da du bisher nur ein Konto für Kaufland in plentymarkets einrichten konntest. Hier wird also nur dein bisheriges Kaufland-Konto angezeigt.
+** Im Tab *Neues Konto* kannst du ein neues Konto für Kaufland hinzufügen.
 
++
+Du kannst für jedes Konto, das du für Kaufland einrichtest, einen Anzeigenamen vergeben. Das Konto wird dann unter diesem Namen im Tab *Konten* angezeigt. Der Anzeigename wird nur in deinem plentymarkets System verwendet und dient einer besseren Übersicht.
+* Außerdem wurde im Menü *Einrichtung » Märkte » Kaufland.de » Einstellungen » Tab: Konten » [Kaufland-Konto öffnen]* die Einstellung *Konfiguration für alte Aufträge verwenden* hinzugefügt.
+Diese Einstellung ist für dein bisheriges Kaufland-Konto standardmäßig aktiviert. Damit wird sichergestellt, dass Aufträge, die vor dem Update auf Kaufland generiert wurden, in plentymarkets verarbeitet werden können. Für neue Kaufland-Konten ist diese Einstellung nicht relevant und deshalb in einer neuen Konfiguration standardmäßig deaktiviert.
++
+[NOTE]
+.Kein To-Do
+======
+Du musst keine weiteren Schritte vornehmen. Alle Einstellungen deines Kaufland-Kontos bleiben auch nach dem Update bestehen. Du findest dein Kaufland-Konto jetzt im Menü *Einrichtung » Märkte » Kaufland.de » Einstellungen » Tab: Konten*.
 
+Weitere Informationen findest du auf der Handbuchseite xref:maerkte:kaufland-de-einrichten.adoc#200[Kaufland.de einrichten].
+======
 
 '''
 
@@ -85,7 +100,21 @@ Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlic
 
 Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 
+[discrete]
+=== Artikel
 
+* Es gibt nun wieder eine Fehlermeldung im Log, wenn eine Preiskalkulation eine Eigenschaft nutzt, die nicht mit der Variante verknüpft ist.
+
+[discrete]
+=== Aufträge
+
+* Es war bei den Auftragsvorlagen nicht möglich einen Status mit mehr als 2 Nachkommastellen auszuwählen.
+* Die Fehlermeldungen in der Status-UI wurden nun wieder angezeigt und der Text wurde angepasst.
+
+[discrete]
+=== Kataloge
+
+* Im Katalogformat *Warenbestand* werden die Einstellungen zum Dezimaltrennzeichen nun korrekt beachtet.
 
 --
 
@@ -99,9 +128,45 @@ Folgende Plugins wurden in den letzten 7 Tagen in einer neuen Version auf plenty
 |===
 |Plugin-Name |Version |To-do
 
-|
-|
-|
+|link:https://marketplace.plentymarkets.com/cytcategorycrossselling_6975[Cross-Selling: Weitere Artikel derselben Kategorie^]
+|1.1.0
+|-
+
+|link:https://marketplace.plentymarkets.com/galaxus_4788[Galaxus.ch^]
+|1.12.7
+|-
+
+|link:https://marketplace.plentymarkets.com/reviewconverter_6843[Google Shopping Produktbewertungen (Sterne)^]
+|1.1.0
+|-
+
+|link:https://marketplace.plentymarkets.com/metro_6600[Metro^]
+|2.2.2
+|-
+
+|link:https://marketplace.plentymarkets.com/cytcookielesstracking_7059[Plenty Google Tracking - 100% Datenqualität, DSGVO konform^]
+|1.3.0
+|-
+
+|link:https://marketplace.plentymarkets.com/cytcustomitemlistpages_54920[Quick & Easy Artikelliste für Newsletter Kampagnen, Aktionen, Direktvertrieb u.v.m.^]
+|1.1.0
+|-
+
+|link:https://marketplace.plentymarkets.com/shopify_4944[Shopify.com^]
+|2.10.13
+|-
+
+|link:https://marketplace.plentymarkets.com/cytitemavailabilitynotification_6906[Verfügbarkeitsbenachrichtigung mit Statistik^]
+|1.5.0
+|-
+
+|link:https://marketplace.plentymarkets.com/cytprintbasket_7002[Warenkorb drucken^]
+|1.1.0
+|-
+
+|link:https://marketplace.plentymarkets.com/cytautomaticcrossselling_7016[Wird oft gekauft mit...^]
+|1.2.0
+|-
 
 |===
 
