Added new Kaufland order referrers

--- a/docs/de-de/modules/daten/pages/interne-IDs.adoc
+++ b/docs/de-de/modules/daten/pages/interne-IDs.adoc
@@ -2513,7 +2513,19 @@ Die Auftragsherkünfte dienen dazu, zu kennzeichnen, über welchen Kanal ein Auf
 |ricardo
 
 |102
-|Kaufland.de (früher real.de)
+|Kaufland (früher real.de)
+
+|102.01
+|Kaufland DE +
+*_Hinweis:_* Diese Auftragsherkunft hat momentan noch keine Funktion.
+
+|102.02
+|Kaufland CZ +
+*_Hinweis:_* Diese Auftragsherkunft hat momentan noch keine Funktion.
+
+|102.03
+|Kaufland SK +
+*_Hinweis:_* Diese Auftragsherkunft hat momentan noch keine Funktion.
 
 |103
 |Kassensystem
