--- a/docs/en-gb/modules/data/pages/internal-IDs.adoc
+++ b/docs/en-gb/modules/data/pages/internal-IDs.adoc
@@ -2515,7 +2515,19 @@ The order referrers indicate the sales channel on which an order was generated. 
 |ricardo
 
 |102
-|Kaufland.de (previously real.de)
+|Kaufland (previously real.de)
+
+|102.01
+|Kaufland DE +
+*_Note:_* This order referrer is currently without function.
+
+|102.02
+|Kaufland CZ +
+*_Note:_* This order referrer is currently without function.
+
+|102.03
+|Kaufland SK +
+*_Note:_* This order referrer is currently without function.
 
 |103
 |Point of sale system
