--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -1387,14 +1387,11 @@ Die Filter, die im Einstellungsmenü des Elements *Globale Filter* zur Verfügun
 *_Beispiel:_* Beinhalten eine oder mehrere Kennzahlen den Filter *Versandprofil*, wird dieser Filter verfügbar sein und du kannst Einstellungen für dieses Filterkriterium vornehmen. Filter, die in keiner von dir genutzten Kennzahlkonfiguration verwendet werden, werden dementsprechend nicht im Einstellungsmenü angezeigt.
 ====
 
-[.discrete]
-===== Beispiel für verfügbare Filter
-
 <<image-global-filters>> zeigt beispielhaft eine Liste von Filtern, die für das Element *Globales Zeitintervall* verfügbar sein können.
 
 .Beispiel: Verfügbare Filter
 [[image-global-filters]]
-image::business-entscheidungen:globale-filter-einstellungen-1.png[]
+image::business-entscheidungen:globale-filter-einstellungen-1.png[width=640, height=360]
 
 Aktiviere zuerst (icon:check-square[role="blue"]) die Filter, die später im Element zur Verfügung stehen sollen.
 
@@ -1402,7 +1399,7 @@ Für die meisten Filter kannst du auf *Bearbeiten* (icon:edit[set=plenty, role="
 
 .Beispiel: Auswahl von Filterkriterien
 [[image-global-filter-settings]]
-image:business-entscheidungen:globale-filter-einstellungen-2.png[]
+image:business-entscheidungen:globale-filter-einstellungen-2.png[width=640, height=360]
 
 [#853]
 ==== Filter anwenden
@@ -1411,7 +1408,7 @@ Ein Filter, für den oben beschriebenen Einstellungen vorgenommen wurden, wird n
 
 .Beispiel: Darstellung der Filter
 [[image-global-filter-display]]
-image::business-entscheidungen:globale-filter-einstellungen-3.png[]
+image::business-entscheidungen:globale-filter-einstellungen-3.png[width=640, height=360]
 
 Du kannst diesen Filter nun jederzeit, wenn du dich auf dem Dashboard befindest, anwenden.
 
