Added OTTO referrer

--- a/docs/de-de/modules/daten/partials/order-referrers.adoc
+++ b/docs/de-de/modules/daten/partials/order-referrers.adoc
@@ -455,6 +455,9 @@ Die Auftragsherkunft zeigt an, auf welchem Verkaufskanal ein Auftrag erzeugt wur
 |155
 |GartenXXL.at
 
+|160
+|OTTO
+
 |160.1
 |OTTO Market
 
