--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -1419,9 +1419,9 @@ Filter anwenden:
 . Klicke rechts neben dem gewünschten Filter auf (icon:chevron-right[role="darkGrey"]). +
 → Die für den Filter verfügbaren Kriteren werden angezeigt.
 . Aktiviere (icon:check-square[role="blue"]) ein oder mehrere Kriterien. +
-*_Tipp:_* Klicke auf das Symbol des Operators links neben dem Namen des Kriteriums, um das Filterverhalten noch weiter zu verändern.
+*_Tipp:_* Klicke auf den Operator links neben dem Namen des Kriteriums, um das Filterverhalten noch weiter zu verändern.
 . Klicke auf *Anwenden*. +
-→ Der Filter wird angewendet und die Dashboard-Ansicht neu geladen. Anschließend werden die Daten anhand des Filters eingegrenzt angezeigt. +
+→ Der Filter wird angewendet und die Dashboard-Ansicht neu geladen. Anschließend werden die gefilterten Daten angezeigt. +
 *_Tipp:_* Die verwendeten Filterkriterien werden oben als so genannte "Chips" dargestellt. Klicke auf icon:clear[set=material, role="darkGrey"], um den Filter zurückzusetzen.
 
 [#855]
@@ -1434,7 +1434,7 @@ Standardfilter verwenden:
 
 . Öffne das Menü *plentymarkets Logo (Start) » Dashboard*.
 . Klicke auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]).
-. Navigiere zum Bereich *Globale Filter*.
+. Navigiere zum Abschnitt *Globale Filter*.
 . Klicke auf *Filter* (icon:tune[set=material, role="darkGrey"]).
 . Wähle die Filter und Kriterien aus, nach denen die Daten der Dashboard-Ansicht bei jedem Öffnen automatisch gefiltert werden sollen. Gehe dabei <<#853, wie oben beschrieben>> vor.
 . *Speichere* (icon:save[set=plenty]) die Einstellungen. +
